cmake_minimum_required(VERSION 3.14)
project(2SH4 C)

set(CMAKE_C_STANDARD 11)

add_executable(2SH4 main.c "Lab 1/lab1.h" "Lab 1/question1.c" "Lab 1/question2.c" "Lab 1/question3.c" "Lab 1/question4.c" "Lab 1/question5.c" "Lab 1/question6.c" "Lab 1/question7.c" "Lab 1/question8.c" "Lab 1/question9a.c" "Lab 1/question9b.c" sizeOfArray.c)
